emailerrr to email

--- a/app/views/enquiries/_actions.html.erb
+++ b/app/views/enquiries/_actions.html.erb
@@ -1,7 +1,7 @@
 <b>Actions</b>
 <br/>
 <br/>
-        <% %w(Emailerrr Follow\ up Note Todo Assign\ to Register Deactivate).each do |elem| %>
+        <% %w(Email Follow\ up Note Todo Assign\ to Register Deactivate).each do |elem| %>
           <!--  Shortening variable names -->
           <% e = elem.downcase %>
           <%= radio_button_tag 'action',
