fixed javascript in partial situation(dateField)

--- a/app/views/enquiries/_follow_up.html.erb
+++ b/app/views/enquiries/_follow_up.html.erb
@@ -1,43 +1,3 @@
-<script type="text/javascript" charset="utf-8">
-
-   $(".dateField").datetimepicker({
-    inline: true,
-    changeMonth: true, 
-    changeYear: true, 
-    yearRange: '1950:2030',
-    controlType: 'select',
-    dateFormat: 'yy-mm-dd', 
-    timeFormat: 'hh:mm:ss'});
-    
-    
-    
-    $(function(){
-      $(".dateField").trigger("select");
-      $(".dateFeld").datetimepicker('setDate', 'addDays(new Date(), 8)');
-      
-      
-      function addDays(dateObj, numDays) {
-     return dateObj.setDate(dateObj.getDate() + numDays);
-    }
-    
-    $(document).on('nested:fieldAdded', function(event){
-      var field = event.field; 
-      var dateField = field.find('.dateField');
-      dateField.datetimepicker({
-        inline: true,
-        changeMonth: true, 
-        changeYear: true, 
-        yearRange: '1950:2030',
-        controlType: 'select',
-        dateFormat: 'yy-mm-dd', 
-        timeFormat: 'hh:mm:ss'
-      });
-    })
-    
-    });
-    
-    
-</script>
 
 <% if @list.to_i == 1 && @enquiry.follow_ups.size > 0 %>
 <table class="tb-stylev prlayout" border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -80,7 +40,7 @@
                         <%= fs(g,[:desc,:size => "2x2"],"text_area",nil,"Description") %>
                     </div>
                     <div class="col6">
-                        <%= fs(g,[:starts_at,:class => "dateField"],"text_field",nil) %>
+                        <%= fs(g,[:starts_at,:class => "dateTimeField"],"text_field",nil) %>
                         <%= fs(g,[:assigned_to, 
                                  User.order(:first_name), 
                                  :id, 
@@ -90,7 +50,7 @@
                     </div>
                     <span onclick="div_toggle(this,'#more_fields')">more fields</span>
                     <div class="cols" id="more_fields" style="display:none;">
-                      <%= fs(g,[:ends_at,:class => "dateField"],"text_field",nil) %>
+                      <%= fs(g,[:ends_at,:class => "dateTimeField"],"text_field",nil) %>
                       <%= fs(g,:api,"check_box",nil,"Add to google calendar?") %>
                       <%= fs(g,:remind_before,"text_field") %> minutes
                       <%= fs(g,:venue,"text_field") %>
