--- a/app/views/enquiries/_programme_details.html.erb
+++ b/app/views/enquiries/_programme_details.html.erb
@@ -1,3 +1,20 @@
+<script type="text/javascript" >
+$(function(){
+
+    $(document).on('nested:fieldAdded', function(event){
+      var field = event.field; 
+      var dateField = field.find('.dateField');
+      dateField.datepicker({
+        inline: true,
+        changeMonth: true, 
+        changeYear: true, 
+        dateFormat: "yy-mm-dd",
+        yearRange: '1980:2050' });
+    })
+
+});
+</script>
+
 <div class="cols bltab " style="width:97%">
 <div class="col1">
   PR
