--- a/app/views/enquiries/_deactivate.html.erb
+++ b/app/views/enquiries/_deactivate.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@enquiry) do |f| %>
  <div id="deactivate-action" class="action-box">
-            <%= fs(f,[:audit_comment,size: "2x2"],"text_area",nil,"Comments") %>
+            <%= fbox(f,[:audit_comment,size: "2x2"],"text_area",nil,"Comments") %>
             <br/>
             <%= f.hidden_field :active,value: false %>
             <%= hidden_field_tag "#{f.object_name}[deactivate]", "from_action" %>
