Style fix in Enquiry view
Removed Compose mail from email.
Add clear tag to break line after Primary button.
Changed the primary list to lighter list tag(Change of class name from
"infodls" to "infosm")

--- a/app/views/enquiries/_show.html.erb
+++ b/app/views/enquiries/_show.html.erb
@@ -32,7 +32,7 @@
                           [<%= stat %>]
                         </span>
                         </h5>
-                        <ul class="infodls">
+                        <ul class="infosm">
                         <li>Mobile : <%= a.mobile1 %>, <%= a.mobile2 %></li>
                         <li>Email : <%= a.email1 %>, <%= a.email2 %></li>
                         <li>Country of Origin : <%= disp1(a,"country_of_origin") %></li>
