--- a/app/views/enquiries/_todo.html.erb
+++ b/app/views/enquiries/_todo.html.erb
@@ -63,6 +63,6 @@
                 </div>
     <%= hidden_field_tag "#{g.object_name}[todo]", "from_action" %>
     <%= g.submit "Create",{:class => "btnp fl"} %>
-    
+    <div class="cl"></div>
 <% end %>
 </div>
