Add and Edit enquiry
Add and Edit enquiry style fixes - except Program interested and back
button
Change of class in fbox function from frbox to fbox

--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -22,6 +22,6 @@
   
   
   <div class="actions">
-    <%= f.submit("Create Enquiry") %>
+   <%= f.submit "Create Enquiry",{:class => "btnp"} %>
   </div>
 <% end %>
