--- a/app/views/enquiries/_enquiry_information.html.erb
+++ b/app/views/enquiries/_enquiry_information.html.erb
@@ -1,25 +1,25 @@
           <!-- NEW Enquiry - STARTS -->
-        <div >
-          <div class="boxp">
+        <div class="boxp">
+          <div >
         <!-- Enquiry INFORMATION - STARTS -->
           <div class="htab">
              <h5><b>Enquiry Information</b></h5>
         </div><br/>
           <div class="cols">
                <div class="col6">
-                    <div class="frbox">
+                    <div class="fbox">
                          <%= f.label :first_name %>
-                         <%= f.text_field :first_name %>
+                         <%= f.text_field :first_name,{tabindex: "1"} %>
                     </div>
-                    <div class="frbox">
+                    <div class="fbox">
                           <%= f.label :mobile1 %>
-                          <%= f.text_field :mobile1 %>
+                          <%= f.text_field :mobile1,{tabindex: "3"} %>
                     </div>
-                    <div class="frbox">
+                    <div class="fbox">
                          <%= f.label :email1 %>
-                         <%= f.text_field :email1 %>
+                         <%= f.text_field :email1,{tabindex: "5"} %>
                     </div>
-                    <div class="frbox">
+                    <div class="fbox">
                          <%= f.label :gender %>
                          <% %w(Male Female).each do |elem| %>
                              <%= radio_button_tag "#{f.object_name}[gender]",
@@ -28,14 +28,14 @@
                              <%= label_tag elem %>
                          <% end %>
                     </div>
-                    <div class="frbox">
+                    <div class="fbox">
                          <%= f.label :country_of_origin %>
                          <%= f.collection_select(:country_id, 
                                 Country.order(:name), 
                                 :id, 
                                 :name) %> &nbsp;&nbsp;
                     </div>
-                    <div class="frbox">
+                    <div class="fbox">
                          <%= go_create(f,"student_source","source_id","name",1) %>  
                     </div>
                     
@@ -43,19 +43,19 @@
                <div class="col6">
                     <div class="frbox">
                          <%= f.label :surname %>
-                         <%= f.text_field :surname %>
+                         <%= f.text_field :surname,{tabindex: "2"} %>
                     </div>
                     <div class="frbox">
                          <%= f.label :mobile2 %>
-                         <%= f.text_field :mobile2 %>
+                         <%= f.text_field :mobile2,{tabindex: "4"} %>
                     </div>
                     <div class="frbox">
                          <%= f.label :email2 %>
-                         <%= f.text_field :email2 %>
+                         <%= f.text_field :email2,{tabindex: "6"} %>
                     </div>
                     <div class="frbox">
                          <%= f.label :date_of_birth %>
-                         <%= f.text_field :date_of_birth,{class: "dateField"} %>
+                         <%= f.text_field :date_of_birth,{class: "dateField",tabindex: "7"} %>
                     </div>
                     <div class="frbox">
                          <%= f.label :score %>
