--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,52 +59,52 @@
     <div id="left-panel">
     <ul id="menu-main">
         <li id="dashboardMM" onMouseOut="MM_swapImgRestore()"
-     onMouseOver="MM_swapImage('iconMM1','','image/icons/org_dashboardb.png',1)">
+     onMouseOver="MM_swapImage('iconMM1','','/images/icons/org_dashboardb.png',1)">
         <img src="/images/icons/org_dashboard.png" id="iconMM1" /><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
         <a href="dashboard.html">Dashboard</a></li>
         <li id="inquiresMM"  onMouseOut="MM_swapImgRestore()"
-     onMouseOver="MM_swapImage('iconMM2','','image/icons/org_inquiryb.png',1)">
+     onMouseOver="MM_swapImage('iconMM2','','/images/icons/org_inquiryb.png',1)">
         <img src="/images/icons/org_inquiry.png"  id="iconMM2"/><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
         <a href="inquiry.html">Inquires</a></li>
         <li id="registrationMM"  onMouseOut="MM_swapImgRestore()"
-     onMouseOver="MM_swapImage('iconMM3','','image/icons/org_registrationb.png',1)">
+     onMouseOver="MM_swapImage('iconMM3','','/images/icons/org_registrationb.png',1)">
         <img src="/images/icons/org_registration.png" id="iconMM3" /><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
         <a href="registration.html">Registration</a></li>
         <li id="accountsMM"  onMouseOut="MM_swapImgRestore()"
-     onMouseOver="MM_swapImage('iconMM4','','image/icons/org_financeb.png',1)">
+     onMouseOver="MM_swapImage('iconMM4','','/images/icons/org_financeb.png',1)">
         <img src="/images/icons/org_finance.png" id="iconMM4" /><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
         <a href="#">Accounts</a></li>
         <li id="contractsMM"  onMouseOut="MM_swapImgRestore()"
-     onMouseOver="MM_swapImage('iconMM5','','image/icons/org_contractsb.png',1)">
+     onMouseOver="MM_swapImage('iconMM5','','/images/icons/org_contractsb.png',1)">
         <img src="/images/icons/org_contracts.png" id="iconMM5" /><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
         <a href="#">Contracts</a></li>
         <li id="emailMM"  onMouseOut="MM_swapImgRestore()"
-     onMouseOver="MM_swapImage('iconMM6','','image/icons/org_emailb.png',1)">
+     onMouseOver="MM_swapImage('iconMM6','','/images/icons/org_emailb.png',1)">
         <img src="/images/icons/org_email.png"  id="iconMM6"/><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
         <a href="#">Email</a></li>
         <li id="calendarMM"  onMouseOut="MM_swapImgRestore()"
-     onMouseOver="MM_swapImage('iconMM7','','image/icons/org_calenderb.png',1)">
+     onMouseOver="MM_swapImage('iconMM7','','/images/icons/org_calenderb.png',1)">
         <img src="/images/icons/org_calender.png" id="iconMM7" /><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
         <a href="#">Calendar</a></li>
         <li id="reportsMM"  onMouseOut="MM_swapImgRestore()"
-     onMouseOver="MM_swapImage('iconMM8','','image/icons/org_reportsb.png',1)">
+     onMouseOver="MM_swapImage('iconMM8','','/images/icons/org_reportsb.png',1)">
         <img src="/images/icons/org_reports.png" id="iconMM8" /><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
         <a href="#">Reports</a></li>
         <li id="todosMM"  onMouseOut="MM_swapImgRestore()"
-     onMouseOver="MM_swapImage('iconMM9','','image/icons/org_todosb.png',1)">
+     onMouseOver="MM_swapImage('iconMM9','','/images/icons/org_todosb.png',1)">
         <img src="/images/icons/org_todos.png" id="iconMM9" /><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
         <a href="#">Todos</a></li>
         <li id="settingMM"  onMouseOut="MM_swapImgRestore()"
-     onMouseOver="MM_swapImage('iconMM10','','image/icons/org_todob.png',1)">
+     onMouseOver="MM_swapImage('iconMM10','','/images/icons/org_todob.png',1)">
         <img src="/images/icons/org_settings.png" id="iconMM10" /><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
         <a href="#">Setting</a></li>
