--- a/app/views/enquiries/_preferred_countries.html.erb
+++ b/app/views/enquiries/_preferred_countries.html.erb
@@ -12,7 +12,8 @@ $(document).ready(function(){
 </script>
  <div class="cols">
   <div class="fbox">
-  Search<input type="text" size="25" class="searchKey"/>
+  <label>Search</label>
+  <input type="text" size="25" class="searchKey"/>
   </div></div>
   <div class="field">
       
