--- a/app/views/enquiries/_programme_details.html.erb
+++ b/app/views/enquiries/_programme_details.html.erb
@@ -22,18 +22,23 @@ $(function(){
 <div class="col11 brgl" style="padding-left:10px">
   
     <div class="fields">
-	<div class="cols">
-	<div class="col6">
-        <% @p_types.each do |i| %>
+	 <% @p_types.each do |i| %>
           <%= p.radio_button :type_id,i.id,{:class => "programme_type",:lang => i.name,
                                             :onclick => "p_type_click(this,this.lang);" } %>
           &nbsp;<%= p.label i.name %>&nbsp;&nbsp;&nbsp;&nbsp;
         <% end %>
-    
-    <div id="object_name" data-obj='<%= parent %>'>
+	<div id="object_name" data-obj='<%= parent %>'>
     </div>
+	 <!-- array of styles corresponding to [0]course_subject_text_div, [1]course_subject, [2]application_status, [3]ins_ref_no calling the array as sty (i.e styles) -->
+	   <% if parent == "enquiry" %>
+		 <% sty = ['','none','none','display:none;'] %>
+	   <% elsif parent == "registration" %>
+		 <% sty = ['display:none;',nil,nil,''] %>
+	   <% end %>
+	<div class="cols">
+	<div class="col6">
     <br/>
-    
+    <div class="fbox">
         <%= label_tag :country %>
         <%= p.collection_select(:country_id, 
                                 Country.order(:name), 
@@ -47,7 +52,8 @@ $(function(){
                                                prepareSelect(this,
                                                '_programmes_attributes_index_institution_id',
                                                '/get_institutions/country/');"}) %>
-		
+	</div>
+	<div class="fbox">
 		 <%= p.label :school %>
          <!-- Setting the default selected institution as the programmes institution if chosen in the enquiry -->
         <% four = p.object.institution_id %>
@@ -59,28 +65,27 @@ $(function(){
                                 {:prompt => "--Institution--"},
                                 {:class => "institutions_select"}) %>
 								
+	</div>
 	
-	 <!-- array of styles corresponding to [0]course_subject_text_div, [1]course_subject, [2]application_status, [3]ins_ref_no calling the array as sty (i.e styles) -->
-       <% if parent == "enquiry" %>
-         <% sty = ['','none','none','display:none;'] %>
-       <% elsif parent == "registration" %>
-         <% sty = ['display:none;',nil,nil,''] %>
-       <% end %>
        
-       <div class="course_subject_text_div" style='<%= sty[0] %>'>
+       <div class="course_subject_text_div fbox" style='<%= sty[0] %>'>
             <%= label_tag :course_subject %>
             <%= p.text_field :course_subject_text %>
        </div>
        
+	   <div class="fbox">
        <%= go_create(p,"course_subject","subject_id","name",sty[1]) %>  
+	   </div>
 	   
+	   <div class="fbox">
 	    <%= label_tag :start_date,nil,{class: 'start_date'} %><br />
           <%= p.text_field :start_date,{class: 'dateField'} %>
-        
-          <div class="end_date_div">
+        </div>
+		
+        <div class="end_date_div fbox">
               <%= label_tag :end_date %><br />
               <%= p.text_field :end_date,{class: 'dateField'} %>
-          </div>
+        </div>
 		  
 	   <div class="cl"></div>
 		 <span class="btns">
@@ -90,7 +95,8 @@ $(function(){
       </span>						
 	  <div class="cl"></div>
 </div>
-<div class="col6">       
+<div class="col6">
+		<div class="fbox">
 	   <%= label_tag :city %>
         <!-- Setting the default selected city as the programmes city if chosen in the enquiry -->
         <% one = p.object.city_id %>
@@ -105,14 +111,16 @@ $(function(){
                                                '_programmes_attributes_index_institution_id',
                                                '/get_institutions/city/');"}) %> &nbsp;&nbsp;
        
-
+		</div>
+		<div class="fbox">
        <%= go_create(p,"course_level","level_id","name") %>
-      
-
-         
-          
-           <%= go_create(p,"application_status","app_status_id","name",sty[2]) %>
-           <div class="ins_ref_no" style='<%= sty[3] %>'>
+      </div>
+	  
+		<div class="fbox">
+		<%= go_create(p,"application_status","app_status_id","name",sty[2]) %>
+		</div>
+		
+           <div class="ins_ref_no fbox" style='<%= sty[3] %>'>
              <%= fs(p,"ins_ref_no","text_field") %>
            </div>
     </div>
