Fixes by faizal
Popup position
Popup style and jquery fix
Comments box to 50% in Deactivate box
Bold to enquiry info
Follow up add more button
todo box fix

--- a/app/views/enquiries/_deactivate.html.erb
+++ b/app/views/enquiries/_deactivate.html.erb
@@ -1,9 +1,14 @@
+<div clas="cols">
+<div class="col6">
 <%= form_for(@enquiry) do |f| %>
- <div id="deactivate-action" class="action-box">
+  <div id="deactivate-action" class="action-box">
+			
             <%= fbox(f,[:audit_comment,size: "2x2"],"text_area",nil,"Comments") %>
             <br/>
             <%= f.hidden_field :active,value: false %>
             <%= hidden_field_tag "#{f.object_name}[deactivate]", "from_action" %>
             <%= f.submit "Deactivate",{class: "btnp",data: { confirm: 'Are you sure?' }} %>
-</div>
+	</div>
 <% end %>
+</div></div>
+<div class="cl"></div>
