--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -21,7 +21,7 @@
   
   
   
-  <div class="actions">
-   <%= f.submit "Create Enquiry",{:class => "btnp"} %>
+  <div class="actions" style="margin-bottom:10px;">
+   <%= f.submit "Create Enquiry",{:class => "btnp fr"} %>
   </div>
 <% end %>
