--- a/app/views/enquiries/_programme_details.html.erb
+++ b/app/views/enquiries/_programme_details.html.erb
@@ -14,7 +14,7 @@ $(function(){
 
 });
 </script>
-
+<br/>
 <div class="cols bltab " style="width:97%">
 <div class="col1">
   PR
@@ -87,7 +87,7 @@ $(function(){
               <%= p.text_field :end_date,{class: 'dateField'} %>
         </div>
 		  
-	   <div class="cl"></div>
+	   <div class="cl"></div><br/>
 		 <span class="btns">
           <img src="/images/icons/active-delete.png" width="18"/>
           &nbsp;&nbsp;
