--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,19 @@
         </li>
         <li><a href="#">Create Task</a></li>
     </ul>
+	<!-- THEME - STARTS -->
+	<ul class="lsb">
+    	<li><a href="#">Theme</a></li>
+        <li><ul class="theme-colrs">
+	<li><span class="blue-theme" data-theme="blue">&nbsp;</span></li>
+	<li><span class="yellow-theme" data-theme="yellow">&nbsp;</span></li>
+	<li><span class="green-theme"  data-theme="green">&nbsp;</span></li>
+	<li><span class="pink-theme"  data-theme="pink">&nbsp;</span></li>
+	<li><span class="violet-theme" data-theme="violet">&nbsp;</span></li>
+	<li><span class="orange-theme" data-theme="orange">&nbsp;</span></li>
+	</ul></li>
+    </ul>
+	<!-- THEME - ENDS -->
     <ul  class="lsb">
         <li>
         <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
