Calendar image fix
Calendar image fix

--- a/app/views/enquiries/_enquiry_information.html.erb
+++ b/app/views/enquiries/_enquiry_information.html.erb
@@ -55,7 +55,7 @@
                     </div>
                     <div class="fbox">
                          <%= f.label :date_of_birth %>
-                         <%= f.text_field :date_of_birth,{class: "dateField",tabindex: "7"} %>
+                         <%= f.text_field :date_of_birth,{class: "dateField caltf ",tabindex: "7"} %>
                     </div>
                     <div class="fbox">
                          <%= f.label :score %>
