--- a/app/views/enquiries/_follow_up.html.erb
+++ b/app/views/enquiries/_follow_up.html.erb
@@ -48,7 +48,7 @@
 						</div>
                     </div>
                     <div class="col6">
-                        <%= fbox(g,[:starts_at,:class => "dateTimeField"],"text_field",nil) %>
+                        <%= fbox(g,[:starts_at,:class => "dateTimeField caltf "],"text_field",nil) %>
                         <%= fbox(g,[:assigned_to, 
                                  User.order(:first_name), 
                                  :id, 
