--- a/app/views/enquiries/_programme_details.html.erb
+++ b/app/views/enquiries/_programme_details.html.erb
@@ -79,12 +79,12 @@ $(function(){
 	   
 	   <div class="fbox">
 	    <%= label_tag :start_date,nil,{class: 'start_date'} %><br />
-          <%= p.text_field :start_date,{class: 'dateField'} %>
+          <%= p.text_field :start_date,{class: 'dateField  caltf'} %>
         </div>
 		
         <div class="end_date_div fbox">
               <%= label_tag :end_date %><br />
-              <%= p.text_field :end_date,{class: 'dateField'} %>
+              <%= p.text_field :end_date,{class: 'dateField caltf '} %>
         </div>
 		  
 	   <div class="cl"></div><br/>
