Time line scroll box
Time line scroll box
Need to change the class name and remove header

--- a/app/views/enquiries/_timeline.html.erb
+++ b/app/views/enquiries/_timeline.html.erb
@@ -1,3 +1,7 @@
+<br/><div class="htab">
+	 <h5><b>Timeline</b></h5>
+</div><br/>
+<div id="scrollboxu"  style="height:440px">		
 <% @timelines.each do |t| %>
 <li>
   <%= image_tag "/images/icons/"+ t.action.to_s + ".png",{class: "fl", width: "35"} %>
@@ -19,4 +23,4 @@
   
 </li>
 <% end %>
-
+</div><br/><br/>
