--- a/app/views/enquiries/_enquiry_information.html.erb
+++ b/app/views/enquiries/_enquiry_information.html.erb
@@ -3,23 +3,23 @@
           <div >
         <!-- Enquiry INFORMATION - STARTS -->
           <div class="htab">
-             <h5><b>Enquiry Information</b></h5>
+             <h6><b>Enquiry Information</b></h6>
         </div><br/>
           <div class="cols">
                <div class="col6">
-                    <div class="fbox">
+                    <div class="frbox">
                          <%= f.label :first_name %>
                          <%= f.text_field :first_name,{tabindex: "1"} %>
                     </div>
-                    <div class="fbox">
+                    <div class="frbox">
                           <%= f.label :mobile1 %>
                           <%= f.text_field :mobile1,{tabindex: "3"} %>
                     </div>
-                    <div class="fbox">
+                    <div class="frbox">
                          <%= f.label :email1 %>
                          <%= f.text_field :email1,{tabindex: "5"} %>
                     </div>
-                    <div class="fbox">
+                    <div class="frbox">
                          <%= f.label :gender %>
                          <% %w(Male Female).each do |elem| %>
                              <%= radio_button_tag "#{f.object_name}[gender]",
@@ -28,42 +28,42 @@
                              <%= label_tag elem %>
                          <% end %>
                     </div>
-                    <div class="fbox">
+                    <div class="frbox">
                          <%= f.label :country_of_origin %>
                          <%= f.collection_select(:country_id, 
                                 Country.order(:name), 
                                 :id, 
                                 :name) %> &nbsp;&nbsp;
                     </div>
-                    <div class="fbox">
+                    <div class="frbox">
                          <%= go_create(f,"student_source","source_id","name",1) %>  
                     </div>
                     
                </div>
                <div class="col6">
-                    <div class="fbox">
+                    <div class="frbox">
                          <%= f.label :surname %>
                          <%= f.text_field :surname,{tabindex: "2"} %>
                     </div>
-                    <div class="fbox">
+                    <div class="frbox">
                          <%= f.label :mobile2 %>
                          <%= f.text_field :mobile2,{tabindex: "4"} %>
                     </div>
-                    <div class="fbox">
+                    <div class="frbox">
                          <%= f.label :email2 %>
                          <%= f.text_field :email2,{tabindex: "6"} %>
                     </div>
-                    <div class="fbox">
+                    <div class="frbox">
                          <%= f.label :date_of_birth %>
                          <%= f.text_field :date_of_birth,{class: "dateField caltf ",tabindex: "7"} %>
                     </div>
-                    <div class="fbox">
+                    <div class="frbox">
                          <%= f.label :score %>
                          <%= f.select :score,
                                    options_for_select((1..10)) %>
 
                     </div>
-                    <%= fbox(f,[:assigned_to, 
+                    <%= fs(f,[:assigned_to, 
                      User.order(:first_name), 
                      :id, 
                      :first_name,
