--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -87,19 +87,20 @@ small{font-size: 11px;color:#666666;font-weight:normal;}
 .subtab-content{margin-top:-1px;background:#fff;padding:20px 20px 20px 20px;display:none;border:1px solid #ccc}
 .tab-content{background:#E8F0FD;padding:10px;display:none}
 .tab-content-b{background:#2A88C8;padding:10px;display:none;color:#fff;padding-left:15px !important}
-.htab{color:#141E4F;padding:5px 0 5px 0;border-bottom:1px dashed #353535}
+.htab{padding:5px 0 5px 0;color:#999;border-bottom:1px solid #F1F0F5}
+.htab h5{font-size:14px}
 .bltab{background:#E8F0FD;padding:5px 10px 5px 10px}
 /* TABS - ENDS */
 
 /* INPUT FIELDS - STARTS */
-input[type=text],input[type=password]{border-radius:1px;box-shadow: 1px 1px 5px #CACDD2 inset;height:24px;padding:3px 5px 2px 10px;width:180px;font-size:14px;border:1px solid #CACDD2;}
+input[type=text],input[type=password]{border-radius:1px;box-shadow: 1px 1px 1px #CACDD2 inset;height:18px;padding:3px 5px 2px 10px;width:180px;font-size:14px;border:1px solid #CACDD2;}
 input[type=text]:hover,input[type=text]:visited,
 input[type=password]:hover,input[type=password]:visited{box-shadow: 1px 1px 1px 1px #EFEFEF inset;}
 textarea{width:96%;border-radius:1px;border:1px solid #CACDD2;box-shadow: 1px 1px 5px #CACDD2 inset;padding:3px 5px 2px 10px;font-size:14px}
 .ipt{border-radius:1px;height:24px;padding:3px 5px 2px 10px;width:200px !important;font-size:14px;background:#F0F0F0;border:1px solid #F0F0F0}
 .caltf{background: #fff url(/images/icons/calendar0.png) 98% no-repeat;padding-right:25px !important;cursor:pointer;width:160px !important;}
 .ipt:hover,.ipt:visited,.ipt:focus{background:#fff}
-select{border-radius:1px;border:1px solid #C0C0C0;height:30px;width:170px;padding:0 0 0 5px;}
+select{border-radius:1px;border:1px solid #C0C0C0;height:23px;width:170px;padding:0 0 0 5px;}
 select:hover,select:visited{border:1px solid #A0A0A0;box-shadow: 1px 1px 1px 1px #EFEFEF;cursor:pointer}
 label{font-size:12px;font-weight:bold;text-align:left;}
 .btnp{font-size:12px;background:#2A88C8;color:#fff;padding:5px 15px 5px 15px;border:2px solid #3D7DAD; margin-right:10px}
@@ -112,14 +113,15 @@ label{font-size:12px;font-weight:bold;text-align:left;}
 .btnb{font-size:12px;background:#222222;color:#fff;padding:5px 15px 5px 15px;box-shadow: 3px 4px 6px #000000 inset;margin-right:10px}
 .btnb:hover{cursor:pointer;}
 .btnsd{font-size:12px;background:#C4C4C4;color:#E2E2E2;padding:5px 15px 5px 15px;box-shadow: 3px 4px 6px #BDBDBD inset;margin-right:10px}
-.fbox,.fsbox{width:97%;margin:10px 0 0 0}
-.fbox label{width:120px;display:inline-block; white-space:nowrap;text-align:left;font-weight:normal;font-weight:bold}
+.fbox,.fsbox{width:97%;margin:10px 0 0 0;vertical-align:top}
+.fbox label{width:120px;display:inline-block; white-space:nowrap;text-align:left;font-weight:normal;font-weight:bold;vertical-align:top}
 .fbox .fields,.fsbox .fields{display:inline}
 .fsbox label{width:70px;display:inline-block; white-space:nowrap;text-align:left;font-weight:normal}
 input[type=radio]{padding-right:5px}
 .fabox{margin:10px 0 0 0;text-align:left;}
-.frbox{width:97%;margin:10px 0 0 0}
-.frbox label{width:120px !important;display:inline-block; white-space:nowrap;text-align:right;font-weight:normal !important;}
+.frbox{width:97%;margin:10px 0 0 0;vertical-align:top}
+.frbox label{width:40px !important;}
+.frbox label:first-child{width:120px !important;display:inline-block; white-space:nowrap;text-align:right;font-weight:normal !important;color:#666;vertical-align:top}
 .frbox input,.frbox select,.frbox textarea{margin-left:15px}
 .frbox .mand{margin-right:-5px}
 /* INPUT FIELDS - ENDS */
@@ -277,7 +279,7 @@ input[type=radio]{padding-right:5px}
 /* FONT SIZE & WEIGHT - ENDS */
 
 /* LIST - STARTS */
-.vls{list-style:none}
+.vls{list-style:none;margin:0}
 .vls li{list-style:none;padding:5px 0 5px 0;margin:0;display:block}
 .vls li:first-child{border-bottom:1px dashed #353535;padding:5px 0 5px 0}
 .vls li img{padding-right:5px}
